--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,16 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- scotty
+- wai-extra
+- wai-cors
+- wai-middleware-static
+- aeson
+- text
+- directory
+- filepath
+
+
 
 library:
   source-dirs: src
